--- a/packages/app-weapp/package.json
+++ b/packages/app-weapp/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "@what-to-eat/core": "workspace:*",
-    "@tarojs/taro": "^3.6.0",
-    "@tarojs/runtime": "^3.6.0",
-    "@tarojs/components": "^3.6.0",
-    "@tarojs/plugin-framework-react": "^3.6.0",
-    "@tarojs/plugin-platform-weapp": "^3.6.0",
-    "@tarojs/react": "^3.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@tarojs/taro": "^4.1.8",
+    "@tarojs/runtime": "^4.1.8",
+    "@tarojs/components": "^4.1.8",
+    "@tarojs/plugin-framework-react": "^4.1.8",
+    "@tarojs/plugin-platform-weapp": "^4.1.8",
+    "@tarojs/react": "^4.1.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/react": "18.2.0",
     "typescript": "^5.3.0",
-    "@tarojs/cli": "^3.6.0",
-    "@tarojs/webpack5-runner": "^3.6.0",
+    "@tarojs/cli": "^4.1.8",
+    "@tarojs/webpack5-runner": "^4.1.8",
     "@babel/core": "^7.23.0",
-    "babel-preset-taro": "^3.6.0",
+    "babel-preset-taro": "^4.1.8",
     "eslint": "^8.54.0",
-    "eslint-config-taro": "^3.6.0"
+    "eslint-config-taro": "^4.1.8"
   }
 }
