--- a/packages/app-weapp/package.json
+++ b/packages/app-weapp/package.json
@@ -20,6 +20,7 @@
     "@tarojs/plugin-framework-react": "^4.1.8",
     "@tarojs/plugin-platform-weapp": "^4.1.8",
     "@tarojs/react": "^4.1.8",
+    "@tarojs/shared": "^4.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
